--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "version": "1.0.2",
   "private": false,
   "license": "MIT",
+  "main": "dist/BingMapsReact.js",
   "module": "dist/BingMapsReact.js",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
